# Django_Practice

./: .env.example  README.md  pyproject.toml  setup.cfg
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blogpost_confirm_delete.html  blogpost_detail.html  blogpost_form.html  blogpost_list.html
catalog/: admin.py  forms.py  models.py  service.py  urls.py  views.py
catalog/fixtures/: initial_data.json
catalog/management/commands/: add_test_products.py  create_moderator.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options.py  0003_product_owner.py
catalog/templates/: base.html
catalog/templates/catalog/: category_list.html  category_products.html  contacts.html  home.html  product_confirm_delete.html  product_detail.html  product_form.html
catalog/templates/includes/: menu.html
config/: settings.py  urls.py
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_remove_customuser_username.py
users/templates/users/: login.html  register.html
