[tool.poetry]
name = "django-practice"
version = "0.1.0"
description = ""
authors = ["Антонюк Евгений <38914583+AntonyukEvgeniy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.7"
psycopg2-binary = "^2.9.10"
environs = "^14.1.1"
pillow = "^11.1.0"
ipython = "^9.0.2"
django-widget-tweaks = "^1.5.0"


[tool.poetry.group.linters.dependencies]
flake8 = "^7.1.2"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
